package com.pp2.crazySports.model.enums;

public enum EstadoSolicitud {
    PENDIENTE,
    APROBADO,
    RECHAZADO
}
